--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.2",
         "drupal/address": "^1.3",
+        "drupal/config_installer": "^1.7",
         "drupal/console": "^1.0.2",
         "drupal/core": "~8.4",
         "drupal/devel": "^1.2",
