--- a/files/config/sync/core.entity_view_display.node.event.default.yml
+++ b/files/config/sync/core.entity_view_display.node.event.default.yml
@@ -4,11 +4,15 @@ status: true
 dependencies:
   config:
     - field.field.node.event.body
+    - field.field.node.event.field_actor
+    - field.field.node.event.field_address
     - field.field.node.event.field_country
     - field.field.node.event.field_date
     - field.field.node.event.field_image
+    - field.field.node.event.field_price
     - node.type.event
   module:
+    - address
     - datetime
     - image
     - options
@@ -26,6 +30,21 @@ content:
     label: hidden
     settings: {  }
     third_party_settings: {  }
+  field_actor:
+    weight: 7
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_address:
+    weight: 5
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: address_default
+    region: content
   field_country:
     type: list_default
     weight: 3
@@ -50,6 +69,17 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+    region: content
+  field_price:
+    weight: 6
+    label: above
+    settings:
+      thousand_separator: ''
+      decimal_separator: .
+      scale: 2
+      prefix_suffix: true
+    third_party_settings: {  }
+    type: number_decimal
     region: content
   links:
     weight: 4
