--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -70,10 +70,10 @@ services:
         set -euxo pipefail
         # Install/update packages managed by composer, including drush
         composer install --no-ansi --optimize-autoloader
-        drush -r "${DOCROOT}" cim -y
+        # drush -r "${DOCROOT}" cim -y
         drush -r "${DOCROOT}" cache-rebuild
         drush -r "${DOCROOT}" updb -y
-        drush -r "${DOCROOT}" en stage_file_proxy -y
+        # drush -r "${DOCROOT}" en stage_file_proxy -y
 
   # What to call the service hosting MySQL. This name also acts as the
   # hostname to access the service by from the php service.
