--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -58,7 +58,8 @@ services:
         chmod -R g+w "${DOCROOT}/sites/default/files" "${DOCROOT}/../files/private"
         chmod 2775 "${DOCROOT}/sites/default/files" "${DOCROOT}/../files/private"
 
-        wget -c https://www.dropbox.com/s/dl/dngaqpd24pgxfrr/schema8files.gz -O - | sudo tar -xz -C ${DOCROOT}/sites/default/files/
+        wget -O /tmp/files.gz https://www.dropbox.com/s/dl/dngaqpd24pgxfrr/schema8files.gz
+        tar -xzf /tmp/files.gz -C ${DOCROOT}/sites/default/files
 
       # Commands that build the site. This is where you would add things
       # like feature reverts or any other drush commands required to
