--- a/.tugboat/config.yml
+++ b/.tugboat/config.yml
@@ -71,7 +71,7 @@ services:
         set -euxo pipefail
         # Install/update packages managed by composer, including drush
         composer install --no-ansi --optimize-autoloader
-        # drush -r "${DOCROOT}" cim -y
+        drush -r "${DOCROOT}" cim -y
         drush -r "${DOCROOT}" cache-rebuild
         drush -r "${DOCROOT}" updb -y
         # drush -r "${DOCROOT}" en stage_file_proxy -y
