--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Schema.org Metatag Demo Site",
+    "name": "karens/schema_metatag_demo",
     "description": "Demo site created for Tugboat.qa.",
     "type": "project",
     "license": "GPL-2.0-or-later",
