--- a/.lando.yml
+++ b/.lando.yml
@@ -8,7 +8,7 @@ env_file:
 services:
   appserver:
     webroot: web
-    type: php    
+    type: php
     run:
       - bash /app/scripts/lando/run.sh
   database:
@@ -20,6 +20,9 @@ events:
     - appserver: /app/vendor/bin/drush updb --root=/app/web -y
     - appserver: /app/vendor/bin/drush cim --root=/app/web -y
     - appserver: /app/vendor/bin/drush cr --root=/app/web
+    - appserver: /app/vendor/bin/drush upwd admin password --root=/app/web
+    - appserver: echo "Run composer install when first installed or modules are updated"
+    - appserver: echo "Log in with credentials admin/password"
 tooling:
   phpunit:
     service: appserver
