--- a/composer.json
+++ b/composer.json
@@ -35,10 +35,12 @@
         "drupal/schema_metatag": "^1.0",
         "drush/drush": "^9.7",
         "karens/basis_drupal": "8.0.x-dev",
-        "webflo/drupal-finder": "^1.0.0",
+        "webflo/drupal-finder": "^1.2",
         "webmozart/path-util": "^2.3"
     },
     "require-dev": {
+        "mglaman/phpstan-drupal": "^0.11.12",
+        "phpstan/phpstan-deprecation-rules": "^0.11",
         "webflo/drupal-core-require-dev": "~8.4"
     },
     "conflict": {
