--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,5 @@ BROWSERTEST_OUTPUT_DIRECTORY=/app/files/simpletest
 PHP_IDE_CONFIG="serverName=appserver"
 DOCKER_CLIENT_TIMEOUT: 120
 COMPOSE_HTTP_TIMEOUT: 120
-DB_SOURCE: 'https://www.dropbox.com/s/dl/lhz8tst3cjgy63u/schema8.gz'
-DB_LOCAL: 'files/private/db.sql.gz'
+DB_SOURCE='https://www.dropbox.com/s/dl/lhz8tst3cjgy63u/schema8.gz'
+DB_LOCAL='files/private/db.sql.gz'
